# nosys

./: .gitattributes  .gitignore  README.md  bootstrap  configure.ac
.github/workflows/: c-cpp.yml  codeql-analysis.yml  release.yml
src/: Makefile.am  nosys.c
